--- a/rosapps/tests/carets/carets.rc
+++ b/rosapps/tests/carets/carets.rc
@@ -1,5 +1,3 @@
 #include <windows.h>
-#include <reactos/resource.h>
-#include "resource.h"
 
-IDB_CARET                BITMAP    DISCARDABLE     "caret.bmp"
+1 BITMAP  DISCARDABLE "caret.bmp"
