fix all but about 8 out of 91 tests. Correct resource usage in xml, fix win32gui vs win32cui mode on most test xml
svn path=/trunk/; revision=19235

--- a/rosapps/tests/miditest/miditest.rc
+++ b/rosapps/tests/miditest/miditest.rc
@@ -1,5 +1,5 @@
 #include <windows.h>
-#include <reactos/resource.h>
+//#include <reactos/resource.h>
 #include "resource.h"
 
 IDR_MAINMENU MENU DISCARDABLE 
