--- a/rosapps/sysutils/ctm/En.rc
+++ b/rosapps/sysutils/ctm/En.rc
@@ -6,11 +6,12 @@ STRINGTABLE DISCARDABLE
 BEGIN
    IDS_APP_TITLE           "Console TaskManager v0.1 by Aleksey Bragin <aleksey@studiocerebral.com>"
    
-   IDS_COLUMN_IMAGENAME    "Image name                      "
+   IDS_COLUMN_NUMBER       "# "
+   IDS_COLUMN_IMAGENAME    "Image name                  "
    IDS_COLUMN_PID          "PID  "
    IDS_COLUMN_CPU          "CPU"
    IDS_COLUMN_MEM          "Mem Usage"
-   IDS_COLUMN_MEM_UNIT		"Kb"
+   IDS_COLUMN_MEM_UNIT		"KB"
    IDS_COLUMN_PF           "Page Faults"
 
    IDS_IDLE_PROCESS        "System Idle Process"
@@ -23,7 +24,7 @@ BEGIN
    
    IDS_KILL_PROCESS        "Are you sure you want to kill this process? (y/n)"
    IDS_KILL_PROCESS_ERR1   "Unable to terminate this process..."
-   IDS_KILL_PROCESS_ERR2   "Unable to terminate process %3d (unable to OpenProcess)"
+   IDS_KILL_PROCESS_ERR2   "Unable to terminate process %d (unable to OpenProcess)"
    
    IDS_CTM_GENERAL_ERR1    "ctm: can't use console."
    IDS_CTM_GENERAL_ERR2    "ctm: can't GetConsoleMode() for input console."
