--- a/rosapps/packmgr/lib/package.xml
+++ b/rosapps/packmgr/lib/package.xml
@@ -1,4 +1,4 @@
-<module name="package" type="win32dll" installbase="system32" installname="package.dll">
+<module name="package" type="win32dll" installbase="system32" installname="package.dll" allowwarnings="true">
 	<importlibrary definition="package.def" />
 	<include base="package">.</include>
 
