--- a/irc/TechBot/TechBot/App.config
+++ b/irc/TechBot/TechBot/App.config
@@ -10,6 +10,7 @@
 		<add key="NtstatusXml" value="C:\IRC\TechBot\ntstatus.xml" />
 		<add key="WinerrorXml" value="C:\IRC\TechBot\winerror.xml" />
 		<add key="HresultXml" value="C:\IRC\TechBot\hresult.xml" />
+		<add key="WmXml" value="C:\IRC\TechBot\wm.xml" />
 		<add key="SvnCommand" value="svn co svn://svn.reactos.com/trunk/reactos" />
 	</appSettings>
 </configuration>
