--- a/irc/TechBot/TechBot/App.config
+++ b/irc/TechBot/TechBot/App.config
@@ -11,7 +11,7 @@
 		<add key="WinerrorXml" value="C:\IRC\TechBot\winerror.xml" />
 		<add key="HresultXml" value="C:\IRC\TechBot\hresult.xml" />
 		<add key="WmXml" value="C:\IRC\TechBot\wm.xml" />
-		<add key="SvnCommand" value="svn co svn://svn.reactos.com/trunk/reactos" />
+		<add key="SvnCommand" value="svn co svn://svn.reactos.org/trunk/reactos" />
 		<add key="BugUrl" value="www.reactos.org/bugzilla/show_bug.cgi?id={0}" />
 	</appSettings>
 </configuration>
